--- a/TreinaWeb.MyApi.Api/TreinaWeb.MyApi.Api.csproj
+++ b/TreinaWeb.MyApi.Api/TreinaWeb.MyApi.Api.csproj
@@ -164,6 +164,7 @@
     <Compile Include="Content\AlunoController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
+    <Compile Include="DTOs\AlunoDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
