--- a/TreinaWeb.MyApi.Api/TreinaWeb.MyApi.Api.csproj
+++ b/TreinaWeb.MyApi.Api/TreinaWeb.MyApi.Api.csproj
@@ -170,6 +170,7 @@
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DTOs\AlunoDTO.cs" />
     <Compile Include="Filters\ApplyModelValidationAttribute.cs" />
+    <Compile Include="Formatters\CsvMediaTypeFormatter.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
